modified project as on 14aug

--- a/mechanical/templates/mechanical/electric-log.html
+++ b/mechanical/templates/mechanical/electric-log.html
@@ -18,344 +18,166 @@
                 ELECTRICAL DAILY LOG SHEET
               </h2>
               <hr />
-              <form>
+              <form  method="POST" action="{% url 'electrical-log' %}" enctype="multipart/form-data">
+                {% csrf_token %}
                 <div class="row">
                   <div class="col col-md-12">
-                    <label class="form-label">QHSE | DOC. NO.</label>
-                    <input type="text" class="form-control" />
+                    <label class="form-label">{{form.doc_no.label}}</label>
+                    {{form.doc_no}}
                   </div>
                 </div>
                 <div class="row">
                   <div class="col col-md-6">
-                    <label class="form-label">Name of RIG</label>
-                    <input type="text" class="form-control" />
+                    <br>
+                    <label class="form-label">{{form.rig_name.label}}</label>
+                    {{form.rig_name}}
                   </div>
                   <div class="col col-md-6">
-                    <label class="form-label">Well NO.</label>
-                    <input type="text" class="form-control" />
+                    <br>
+                    <label class="form-label">{{form.well.label}}</label>
+                    {{form.well}}
                   </div>
                 </div>
                 <div class="row">
                   <div class="col col-md-6">
-                    <label class="form-label">Location</label>
-                    <input type="text" class="form-control" />
+                    <br>
+                    <label class="form-label">{{form.location.label}}</label>
+                    {{form.location}}
                   </div>
                   <div class="col col-md-6">
-                    <label class="form-label">DATE</label>
-                    <input type="date" class="form-control" />
+                    <br>
+                    <label class="form-label">{{form.date.label}}</label>
+                    {{form.date}}
                   </div>
                 </div>
                 <hr />
+                {{ electrical_running_hours_formset.management_form }}
+                {% for form in electrical_running_hours_formset %}
                 <div class="row">
                   <div class="col col-md-6 col-lg-6">
-                    <label class="form-label"
-                      >Previous Day Cumulative Running Hours</label
+                    <label class="form-label">
+                      Previous Day Cumulative Running {{ form.runninghours.label }}</label
                     >
-                    <input type="number" class="form-control" />
+                    {{ form.runninghours }}
                   </div>
                 </div>
-                <hr />
+               
+                <br />
+                {% endfor %}
+                <hr>
                 <h4>SHIFTS</h4>
+                {{ electrical_shift_formset.management_form }}
+                {% for form in electrical_shift_formset %}
+             
                 <div class="row">
                   <div class="col col-md-6">
-                    <div class="form-check form-check-inline">
-                      <input
-                        class="form-check-input"
-                        type="radio"
-                        name="inlineRadioOptions"
-                        id="firstShift"
-                        value="option1"
-                      />
-                      <label class="form-check-label" for="firstShift"
-                        >Day Shift</label
-                      >
-                    </div>
-                  </div>
-                  <div class="col col-md-6">
-                    <div class="form-check form-check-inline">
-                      <input
-                        class="form-check-input"
-                        type="radio"
-                        name="inlineRadioOptions"
-                        id="secondShift"
-                        value="option2"
-                      />
-                      <label class="form-check-label" for="secondShift"
-                        >Night Shift</label
-                      >
-                    </div>
-                  </div>
-                </div>
-                <hr />
-                <div class="row">
-                  <div class="col col-12 row-modify4">
-                    <label class="form-label select-label"
-                      >Equipment Details & Ratings</label
-                    >
-                    <select
-                      class="select form-control-md"
-                      style="font-size: 15px"
-                    >
-                      <option value="1">
-                        Alternator-1,1430kVA, KATO Make
-                      </option>
-                      <option value="2">
-                        Alternator-2,1430kVA, KATO Make
-                      </option>
-                      <option value="3">
-                        Alternator-3,1430kVA, KATO Make
-                      </option>
-                      <option value="4">
-                        Alternator-4,1430kVA, KATO Make
-                      </option>
-                      <option value="5">
-                        Emg. DG Set Alternator, 400kVA
-                      </option>
-                      <option value="6">HPU Motor (Main)-1,750HP</option>
-                      <option value="7">HPU Motor (Main)-2,750HP</option>
-                      <option value="8">
-                        HPU1 supercharger Motor-1,40HP
-                      </option>
-                      <option value="9">
-                        HPU1 supercharger Motor-2,40HP
-                      </option>
-                      <option value="10">
-                        HPU2 supercharger Motor-1,40HP
-                      </option>
-                      <option value="11">
-                        HPU2 supercharger Motor-2,40HP
-                      </option>
-                      <option value="12">
-                        Mud Pump Motor(Main)-1,1600HP
-                      </option>
-                      <option value="13">
-                        Mud Pump Motor(Main)-2,1600HP
-                      </option>
-                      <option value="14">MP1 Blower Motor,25HP</option>
-                      <option value="15">
-                        MP1 Liner Cooling Pump Motor,3HP
-                      </option>
-                      <option value="16">MP1 Lube Oil Pump Motor,4HP</option>
-                      <option value="17">MP2 Blower Motor,25HP</option>
-                      <option value="18">
-                        MP2 Liner Cooling Pump Motor,3HP
-                      </option>
-                      <option value="19">MP2 Lube Oil Pump Motor,4HP</option>
-                      <option value="20">
-                        Pipe Handler Clamp Motor,1.2kW
-                      </option>
-                      <option value="21">
-                        Pipe Handler Lower Arm Motor,1.5kW
-                      </option>
-                      <option value="22">
-                        Pipe Handler Rotation Motor,11kW
-                      </option>
-                      <option value="23">
-                        Electrical Air Compressor Motor,100HP
-                      </option>
-                      <option value="24">BOP Koomy Control Motor,30HP</option>
-                      <option value="25">Rig Up HPU Motor</option>
-                      <option value="26">
-                        Mud Supercharger Motor-1,100HP
-                      </option>
-                      <option value="27">
-                        Mud Supercharger Motor-2,100HP
-                      </option>
-                      <option value="28">
-                        Hopper (Mud Mixer) Motor-1,100HP
-                      </option>
-                      <option value="29">
-                        Hopper (Mud Mixer) Motor-2,100HP
-                      </option>
-                      <option value="30">Desander (ULMMC) Motor,100HP</option>
-                      <option value="31">Desilter (ULMMC) Motor,100HP</option>
-                      <option value="32">Trip Tank Motor-1,20HP</option>
-                      <option value="33">Trip Tank Motor-2,20HP</option>
-                      <option value="34">
-                        Still Tank Water Motor-1,30HP
-                      </option>
-                      <option value="35">
-                        Still Tank Water Motor-2,30HP
-                      </option>
-                      <option value="36">
-                        Ground Water Pump Motor-1,30HP
-                      </option>
-                      <option value="37">
-                        Ground Water Pump Motor-2,30HP
-                      </option>
-                      <option value="38">HP Wasing Unit Motor-1,20HP</option>
-                      <option value="39">HP Wasing Unit Motor-2,20HP</option>
-                      <option value="40">Shale Shaker Motor-1,2SHP</option>
-                      <option value="41">Shale Shaker Motor-2,2SHP</option>
-                      <option value="42">Shale Shaker Motor-3,2SHP</option>
-                      <option value="43">Mud Cleaner Motor,2SHP</option>
-                      <option value="44">Vaccum Degasser Motor,5HP</option>
-                      <option value="45">Agitator Motor-1,25HP</option>
-                      <option value="46">Agitator Motor-2,25HP</option>
-                      <option value="47">Agitator Motor-3,25HP</option>
-                      <option value="48">Agitator Motor-4,25HP</option>
-                      <option value="49">Agitator Motor-5,25HP</option>
-                      <option value="50">Agitator Motor-6,25HP</option>
-                      <option value="51">Agitator Motor-7,25HP</option>
-                      <option value="52">Agitator Motor-8,25HP</option>
-                      <option value="53">Agitator Motor-9,25HP</option>
-                      <option value="54">Agitator Motor-10,25HP</option>
-                      <option value="55">Agitator Motor-11,25HP</option>
-                      <option value="56">Agitator Motor-12,25HP</option>
-                      <option value="57">Agitator Motor-13,25HP</option>
-                      <option value="58">Agitator Motor-14,25HP</option>
-                      <option value="59">Agitator Motor-15,25HP</option>
-                      <option value="60">Agitator Motor-16,25HP</option>
-                      <option value="61">Fuel Receiving Pump-1(U),3HP</option>
-                      <option value="62">Fuel Receiving Pump-2(U),3HP</option>
-                      <option value="63">Fuel Transfer Pump-1(L),5HP</option>
-                      <option value="64">Fuel Transfer Pump-2(L),5HP</option>
-                      <option value="65">Radiator Motor-1,60HP</option>
-                      <option value="66">Radiator Motor-2,60HP</option>
-                      <option value="67">Radiator Motor-3,60HP</option>
-                      <option value="68">Radiator Motor-4,60HP</option>
-                      <option value="69">Drilling PCR HVAC</option>
-                      <option value="70">MUD PCR HVAC</option>
-                      <option value="71">600V System</option>
-                      <option value="72">Mobile Welding Set</option>
-                      <option value="73">
-                        Welding Rectifier/Transformer
-                      </option>
-                    </select>
+                    {{ form.shifttype.label }}
+                   
+                     {{ form.shifttype }}
                   </div>
                 </div>
                 <br />
-                <span>Equipment Status</span>
+                
+                <div class="row">
+                  <div class="col col-12 row-modify4">
+                    <label class="form-label select-label"
+                      >{{ form.equipdetails.label }}</label
+                    >
+                    {{ form.equipdetails }}
+                  </div>
+                </div>
+                <br />
+                <span>{{ form.equipstatus.label }}</span>
                 <div class="row">
                   <div class="col col-md-6">
-                    <div class="form-check form-check-inline">
-                      <input
-                        class="form-check-input"
-                        type="radio"
-                        name="inlineRadioOptions"
-                        id="firstShift"
-                        value="option1"
-                      />
-                      <label class="form-check-label" for="firstShift"
-                        >OK</label
-                      >
-                    </div>
-                  </div>
-                  <div class="col col-md-6">
-                    <div class="form-check form-check-inline">
-                      <input
-                        class="form-check-input"
-                        type="radio"
-                        name="inlineRadioOptions"
-                        id="secondShift"
-                        value="option2"
-                      />
-                      <label class="form-check-label" for="secondShift"
-                        >Not OK</label
-                      >
-                    </div>
+                    
+                      
+                      {{ form.equipstatus }}
+                 
                   </div>
                 </div>
                 <br />
                 <div class="row">
                   <div class="col col-6">
                     <label class="form-label"
-                      >Running Hours during the shift</label
+                      >{{ form.runninghours.label }}</label
                     >
-                    <input type="number" class="form-control" />
+                    {{ form.runninghours }}
                   </div>
                 </div>
                 <br />
                 <div class="row row-modify">
                   <span>Break Down Time</span>
                   <div class="col col-6">
-                    <label for="clock">From (Hours)</label>
-                    <input type="time" />
+                    <label for="clock">{{ form.breakfrom.label }}</label>
+                    {{ form.breakfrom }}
                   </div>
                   <div class="col col-6">
-                    <label for="clock">To (Hours)</label>
-                    <input type="time" />
+                    <label for="clock">{{ form.breakto.label }}</label>
+                    {{ form.breakto }}
                   </div>
                 </div>
-                <hr />
+            
                 <div class="row">
                   <div class="col col-md-6">
+                    <br>
                     <label class="form-label"
-                      >Total Cumulative Running Hours</label
+                      >{{ form.totalcummulative.label }}</label
                     >
-                    <input type="number" class="form-control" />
+                    <br>
+                    {{ form.totalcummulative }}
                   </div>
                 </div>
-                <hr />
+
                 <div class="mb-3 mt-3">
                   <label for="comment"
-                    >Remarks/Requirements from Base, if any:</label
+                    >{{ form.remarks.label }}</label
                   >
-                  <textarea
-                    class="form-control"
-                    rows="3"
-                    id="comment"
-                    name="text"
-                  ></textarea>
+                  {{ form.remarks }}
                 </div>
                 <div class="mb-3 mt-3">
                   <label for="comment"
-                    >Equipment/Material Received/Sent:</label
+                    >{{ form.equipment.label }}</label
                   >
-                  <textarea
-                    class="form-control"
-                    rows="3"
-                    id="comment"
-                    name="text"
-                  ></textarea>
+                  {{ form.equipment }}
                 </div>
                 <div class="mb-3 mt-3">
                   <label for="comment"
-                    >Job Caring Out During the Shift: Defect/Failure reports,
-                    if any</label
+                    >{{ form.job.label }}</label
                   >
-                  <textarea
-                    class="form-control"
-                    rows="3"
-                    id="comment"
-                    name="text"
-                  ></textarea>
+                  {{ form.job }}
                 </div>
                 <div class="row row-modify3">
                   <span>Energy/Meter Reading at 06:00 hrs on:</span>
                   <div class="col">
-                    <label for="comment">DG-1 :</label>
-                    <input type="number" class="form-control" />
+                    <label for="comment">{{ form.energydg1.label }}</label>
+                    {{ form.energydg1 }}
                   </div>
                   <div class="col">
-                    <label for="comment">DG-2 :</label>
-                    <input type="number" class="form-control" />
+                    <label for="comment">{{ form.energydg2.label }}</label>
+                    {{ form.energydg2}}
                   </div>
                   <div class="col">
-                    <label for="comment">DG-3 :</label>
-                    <input type="number" class="form-control" />
+                    <label for="comment">{{ form.energydg3.label }}</label>
+                    {{ form.energydg3 }}
                   </div>
                   <div class="col">
-                    <label for="comment">DG-4 :</label>
-                    <input type="number" class="form-control" />
+                    <label for="comment">{{ form.energydg4.label }}</label>
+                    {{ form.energydg4 }}
                   </div>
                 </div>
                 <br />
                 <div class="mb-3 mt-3">
                   <label for="comment"
-                    >Report on Safety/ Near Miss Accidents:</label
+                    >{{ form.safetyreport.label }}</label
                   >
-                  <textarea
-                    class="form-control"
-                    rows="3"
-                    id="comment"
-                    name="text"
-                  ></textarea>
+                  {{ form.safetyreport }}
                 </div>
+                {% endfor %}
                 <div class="d-grid gap-2 my-4 py-2">
-                  <button class="btn btn-primary" type="button">
-                    Submit
-                  </button>
+                  <input class="btn btn-primary" type="submit" value="Submit" />
+            
+                 
                 </div>
               </form>
             </div>
@@ -363,6 +185,7 @@
         </div>
       </div>
     </div>
+    
   </section>
 
 {% endblock %}
