--- a/mechanical/templates/mechanical/view-equipment-log.html
+++ b/mechanical/templates/mechanical/view-equipment-log.html
@@ -4,136 +4,141 @@
 {% endblock %}
 
 {% block content %}
-<section class="p-5 my-5">
-    <div class="container py-5 h-100">
-      <div class="row justify-content-center align-items-center h-100">
-        <div class="col-12 col-lg-9 col-xl-7">
-          <div class="card shadow-2-strong card-registration bg-light text-dark" style="border-radius: 15px;">
-            <div class="card-body p-4 p-md-5">
-              <h2 class="mb-4 pb-2 pb-md-0 mb-md-5 text-center">Mechanical Daily DPR</h2>
 
-                  <div class="row pb-3">
-                    <div class="col col-md-6 py-2">
-                        rig_name = {{ rig.rig_name }}
-                    </div>
 
-                    <div class="col col-md-6 py-2">
-                        well = {{ rig.well }}
-                    </div>
+    <section class="p-5 my-5">
+      <div class="container py-5 h-100">
+        <div class="row justify-content-center align-items-center h-100">
+          <div class="col-12 col-lg-9 col-xl-7">
+            <div
+              class="card shadow-2-strong card-registration bg-light text-dark"
+              style="border-radius: 15px"
+            >
+              <div class="card-body p-4 p-md-5">
+                <h2 class="mb-4 pb-2 pb-md-0 mb-md-5 text-center">
+                  Mechanical Daily DPR
+                </h2>
 
-                    <div class="col col-md-6 py-2">
-                        date = {{ rig.date }}
-                    </div>
+                <table class="table table-striped">
+                  <tr>
+                    <td>Rig Name</td>
+                    <td>{{ rig.rig_name }}</td>
+                  </tr>
+                  <tr>
+                    <td>Well</td>
+                    <td>{{ rig.well }}</td>
+                  </tr>
+                  <tr>
+                    <td>Date</td>
+                    <td>{{ rig.date }}</td>
+                  </tr>
+                  <tr>
+                    <td>Shift</td>
+                    <td>{{ rig.shift }}</td>
+                  </tr>
+                </table>
 
-                    <div class="col col-md-6 py-2">
-                        shift = {{ rig.shift }}
-                    </div>
-                  </div>
-                  <hr />
+                <h4 class="py-3 text-center">EQUIPMENT LOG SHEET</h4>
+                {% for equipment in equipments %}
+                <table class="table table-striped">
+                  <tr>
+                    <td>Equipment Name</td>
+                    <td>{{ equipment.equip_name }}</td>
+                  </tr>
+                  <tr>
+                    <td>Water Temperature</td>
+                    <td>{{ equipment.water_temp }}</td>
+                  </tr>
+                  <tr>
+                    <td>Oil Temperature</td>
+                    <td>{{ equipment.oil_temp }}</td>
+                  </tr>
+                  <tr>
+                    <td>Oil Pressure</td>
+                    <td>{{ equipment.oil_pressure }}</td>
+                  </tr>
+                  <tr>
+                    <td>Equipment Working Hours</td>
+                    <td>{{ equipment.equip_working_hour }}</td>
+                  </tr>
+                  <tr>
+                    <td>Equipment Available Hours</td>
+                    <td>{{ equipment.equip_avail_hour }}</td>
+                  </tr>
+                  <tr>
+                    <td>Equipment Oil Used</td>
+                    <td>{{ equipment.equip_oil_used }}</td>
+                  </tr>
+                </table>
+                {% endfor %}
+               
+                <h4 class="py-3 text-center">REPAIRING LOG SHEET</h4>
+                {% for service in services %}
+                <table class="table table-striped">
+                  <tr>
+                    <td>Equipment Service Name</td>
+                    <td>{{ service.equip_serv_name }}</td>
+                  </tr>
+                  <tr>
+                    <td>Working Hours</td>
+                    <td>{{ service.working_hour }}</td>
+                  </tr>
+                  <tr>
+                    <td>Available Hours</td>
+                    <td>{{ service.avail_hour }}</td>
+                  </tr>
+                  <tr>
+                    <td>Oil used</td>
+                    <td>{{ service.oil_used }}</td>
+                  </tr>
+                </table>
 
-                  <h4 class="pt-2 text-center">EQUIPMENT LOG SHEET</h4>
+                <div
+                  class="pb-5 pt-2"
+                  style="display: flex; flex-direction: column"
+                >
+                  <label for="">Instructions</label>
+                  <textarea name="" id="" cols="60" rows="5">
+                    {{ service.intstructions }}</textarea
+                  >
+                </div>
+                {% endfor %}
+                
+             
 
-                  {% for equipment in equipments %}
-                  <div class="row py-3">
-                    <div class="col-12">
-                        equip_name = {{ equipment.equip_name }}
-                    </div>
-                  </div>
-                  <br />
-                  <div class="row py-3">
-                    <div class="col col-md-4">
-                        water_temp = {{ equipment.water_temp }}
-                    </div>
+                <h4 class="py-3 text-center">Rig Down Time</h4>
+                {% for rigdown in rigdowns %}
+                <table class="table table-striped">
+                  <tr>
+                    <td>From Hours</td>
+                    <td>{{ rigdown.from_hr }}</td>
+                  </tr>
+                  <tr>
+                    <td>To Hours</td>
+                    <td>{{ rigdown.to_hr }}</td>
+                  </tr>
+                </table>
+                {% endfor %}
+                
 
-                    <div class="col col-md-4">
-                        oil_temp=  {{ equipment.oil_temp }}
-                    </div>
+                <div class="py-3" style="display: flex; flex-direction: column">
+                  <label for="" class="pb-2">Requirements</label>
+                  <textarea name="" id="" cols="60" rows="5">
+                    {{ rig.requirements }}</textarea
+                  >
+                </div>
 
-                    <div class="col col-md-4">
-                        oil_pressure=  {{ equipment.oil_pressure }}
-                    </div>
-                  </div>
-
-                  <div class="row py-3">
-                    <div class="col col-md-4">
-                        equip_working_hour= {{ equipment.equip_working_hour }}
-                    </div>
-
-                    <div class="col col-md-4">
-                        equip_avail_hour = {{ equipment.equip_avail_hour }}
-                    </div>
-
-                    <div class="col col-md-4">
-                        equip_oil_used =  {{ equipment.equip_oil_used }}
-                    </div>
-                  </div>
-                  {% endfor %}
-                  <hr />
-
-                  <h4 class="pt-2 text-center">REPAIRING LOG SHEET</h4>
-
-                  {% for service in services %}
-                  <div class="row py-3">
-                    <div class="col-12">
-                        equip_serv_name= {{ service.equip_serv_name }}
-                    </div>
-                  </div>
-                  <br />
-                  <div class="row py-3">
-                    <div class="col col-md-4">
-                        working_hour= {{ service.working_hour }}
-                    </div>
-                    <div class="col col-md-4">
-                        avail_hour= {{ service.avail_hour }}
-                    </div>
-                    <div class="col col-md-4">
-                        oil_used= {{ service.oil_used }}
-                    </div>
-                  </div>
-                  <!-- <div class="row"> -->
-                  <div class="mb-3 mt-3">
-                    intstructions= {{ service.intstructions }}
-                  </div>
-                  {% endfor %}
-                  <hr />
-
-                  <h4 class="pt-2 text-center">Rig Down Time</h4>
-
-                  {% for rigdown in rigdowns %}
-                  <div class="row py-3">
-                    <div class="col col-6">
-                        from_hr= {{ rigdown.from_hr }}
-                    </div>
-                    <div class="col col-6">
-                        to_hr = { rigdown.to_hr }}
-                    </div>
-                  </div>
-                  {% endfor %}
-                  <hr />
-
-                  <div class="row py-3">
-                    <div class="col-12">
-                        requirements = {{ rig.requirements }}
-                    </div>
-                  </div>
-
-                  <div class="row py-3">
-                    <div class="col-12">
-                        mech_engineer sign = {{ rig.mech_engineer }}
-                    </div>
-                  </div>
-
-                  <div class="d-grid gap-2 my-4 py-2">
-                    <input class="btn btn-primary" type="submit" value="Submit" />
-                  </div>
-                </fieldset>
-              </form>
+                <div class="py-3" style="display: flex; flex-direction: column">
+                  <label for="" class="pb-2">Mechanical Engineer</label>
+                  <textarea name="" id="" cols="60" rows="5">
+                    {{ rig.mech_engineer }}</textarea
+                  >
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
-
-
+    </section>
+   
 {% endblock %}
