tested LAS n DLIS n deleted useless requirement files

--- a/search/templates/search/search.html
+++ b/search/templates/search/search.html
@@ -42,7 +42,7 @@
             <!-- for underscore problem of django -->
             <h3><a href="#">{{ i | get:"_index" }}</a></h3>
             <a href="#">{{ i | get:"_ignored" }}</a>
-            <p>{{ i | get:"_source" }}</p>
+            <!-- <p>{{ i | get:"_source" }}</p> -->
             
             {% endfor %}
             {% else %}
