--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -9,11 +9,11 @@
         <h6 class="tagline my-0" style="color: darkred"> Oil and Natural Gas Corporation Limited <p style="font-size: 10px; color: black" class="mb-2"> A Maharatna Company </p>
         </h6>
       </div>
-      
+
       <a href="{% url 'search' %}">
         <img src="{% static 'Assets\search.png' %}" width="40" height="40" alt="" />
       </a>
-      
+
 
       <div class="navbeaut">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,11 +33,11 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-primary" href="#">Login</a>
+              <a class="nav-link text-primary" href="{% url 'upload' %}">Upload Files</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link text-primary" href="#">Reports</a>
-            </li>
+            <!-- <li class="nav-item">
+              <a class="nav-link text-primary" href="#" target="_blank">Reports</a>
+            </li> -->
           </ul>
         </div>
       </div>
