--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -10,6 +10,7 @@
         </h6>
       </div>
 
+      {% if user.is_authenticated %}
       <a href="{% url 'search' %}">
         <img src="{% static 'Assets\search.png' %}" width="40" height="40" alt="" />
       </a>
@@ -35,12 +36,14 @@
             <li class="nav-item">
               <a class="nav-link text-primary" href="{% url 'upload' %}">Upload Files</a>
             </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link text-primary" href="#" target="_blank">Reports</a>
-            </li> -->
+            <li class="nav-item">
+              <a class="nav-link text-primary" href="{% url 'logout' %}">Logout</a>
+            </li>
           </ul>
         </div>
       </div>
+      {% endif %}
+
     </div>
   </nav>
   <hr class="my-0" style="color: maroon; height: 3px; opacity: 1" />
