ONGC Demo done with es, pdfupload, sqlsearch

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,8 @@
 
   {% if messages %}
     {% for message in messages %}
-    <div class="alert alert-danger text-center" role="alert">
+    <div class="alert alert-{{ message.tags }} text-center" role="alert">
+      
       {{message}}
     </div>
     {% endfor %}
