--- a/templates/home.html
+++ b/templates/home.html
@@ -86,7 +86,7 @@
         <h5>UTILITIES</h5>
         <img src="{% static 'Assets\wrench.png' %}" class="card-title mb-3 mt-3 img-fluid" alt="SAS" height="60px" width="60px" />
         <div class="d-grid gap-2">
-          <button class="btn btn-success" type="button"> Web Analytics </button>
+          <a href="https://anasasviymicslb.ongc.co.in/SASLogon/login" target="_blank" class="btn btn-success" type="button"> Web Analytics </a>
         </div>
         <br />
         <div class="d-grid gap-2">
