--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -18,7 +18,7 @@
                 <form action="{% url 'login' %}" method="POST">
                     {% csrf_token %}
                       <div class="form-group my-2">
-                         <input type="email" class="form-control" placeholder="Email Address" name="email">
+                         <input type="text" class="form-control" placeholder="Username" name="username">
                       </div> <!-- form-group// -->
                       <div class="form-group">
                         <input type="password" class="form-control" placeholder="Password" name="password">
