--- a/search/templates/search/search.html
+++ b/search/templates/search/search.html
@@ -19,6 +19,17 @@
                     <div class="mb-3">
                         <input type="text" name="search_query" class="form-control" placeholder="Search ONGC files" value="{{ search_query }}" />
                     </div>
+                    
+                    <div class="col-12 mb-3">
+                        <label class="form-label select-label">Cluster</label>
+                        <select name="indexname" class="form-control" id="id_form-0-equip_name" value={{indexname}}>
+                            <option value="idttest">IDT Portal</option>
+                            <option value="ocredpdf">Uploaded Pdf</option>
+                            <option value="mssql-well_list">DB Search</option>
+
+                        </select>
+                    </div>
+
                     <input type="submit" class="btn btn-success" value="Search" />
                 </form>
 
@@ -27,7 +38,6 @@
     </div>
 </section>
 
-{% if results != '' %}
 <!-- search results -->
 <hr>
 <section id="main" class="bg-white text-dark py-5">
@@ -36,21 +46,56 @@
         <div class="row">
             <div class="col-md-12">
 
-            {% for i in results %}
-            <h3 class="m-4"><a href="{% url 'viewer' ocrfilepath=i.ocr_url %}?&search=LLP" target="_blank">{{ i.filename }}</a></h3>
-            <p>{{ i.snippet }}...</p>
-            <p>{{ i.ocr_url }}</p>
+            {% if results %}
+                {% if request.GET.indexname == 'mssql-well_list'%}
+                <h3>We have found matching tables. Please click to select</h3>
+                    
+                <div class="row">
+                    <div class="col">
+                    <a class="btn btn-primary" href="{% url 'sqlsearch-dp' request.GET.search_query %}" role="button">DP</a>
+                    </div>
+                    <div class="col">
+                    <a class="btn btn-danger" href="{% url 'sqlsearch-nob' request.GET.search_query %}" role="button">NOB</a>
+                    </div>
+                </div>
 
-            {% endfor %}
+                {% else %}
 
+                {% for i in results %}
+                <h3 class="m-4"><a href="{{ i.ocr_url }}" target="_blank">{{ i.filename }}</a></h3>
+                <p>{{ i.snippet }}...</p>
+                {% endfor %}
+
+                {% endif %}
+                         
+            {% elif response %}
+            
+                {% if request.GET.indexname == 'mssql-well_list'%}
+
+                <h3>let's have all round search</h3>
+                        
+                <div class="row">
+                    <div class="col">
+                    <a class="btn btn-primary" href="{% url 'sqlsearch-dp-other' request.GET.search_query %}" role="button">DP</a>
+                    </div>
+                    <div class="col">
+                    <a class="btn btn-danger" href="{% url 'sqlsearch-nob-other' request.GET.search_query %}" role="button">NOB</a>
+                    </div>
+                </div>
+                
+                {% else %}
+                <h2>No results have been found.</h2>
+                {% endif %}
+            {% endif %}
+                
             </div>
         </div>
     </div>
 </section>
 
-{% endif %}
 
 {% endblock %}
+
 
 
 
